drkns 27.08.2019 20:24:52 +0100 - build 5457

1. С форума: Улучшения клавиатурной навигации в стандартной поставке

drkns 26.08.2019 20:15:37 +0100 - build 5456

1. 0003735: Attribute Dialog: разный фокус для symlink-папок (уточнение 5455).

drkns 25.08.2019 22:22:22 +0100 - build 5455

1. Как известно, время в Windows измеряется в 100-ns интервалах.
   В диалоге установки атрибутов все времена округлялись до миллисекунд, включая те, которые не трогали.
   С точки зрения информационной безопасности это явное палево, поэтому теперь диалог раскрывает всё до последнего тика.
   Аналогично в фильтрах и панелях.

2. Редкоиспользуемые атрибуты вынесены в отдельный диалог.

3. Прочие изменения в диалоге атрибутов:
   - Убрана еще куча копипасты.
   - Унифицирована логика обработки атрибутов, дат и владельцев при переключении "Process subfolders" и при начальном заполнении диалога.

4. Буквы и порядок атрибутов в панелях более-менее приведены в соответствие с Windows.

5. С форума: при повторном поиске каталог первого найденного файла не отображается.

6. Больше типов в far.natvis.

MZK 24.08.2019 21:04:41 -0700

1. Перевёл на английский ещё несколько страниц справки far:config.

drkns 22.08.2019 23:34:45 +0100 - build 5454

1. Рефакторинг.

2. Мелкая оптимизация опроса mapped network drives.

3. Больше типов в far.natvis.

drkns 22.08.2019 23:21:59 +0100 - build 5453

1. 0003733: блокируется работа всех инстансов фара, если залочена база ассоциаций.

drkns 18.08.2019 15:08:42 +0100 - build 5452

1. Поддержка атрибутов FILE_ATTRIBUTE_RECALL_ON_OPEN, FILE_ATTRIBUTE_RECALL_ON_DATA_ACCESS, FILE_ATTRIBUTE_STRICTLY_SEQUENTIAL. Потому что можем.

drkns 16.08.2019 23:06:24 +0100 - build 5451

1. Падение при импорте кривых xml.

2. Исправлена сборка в GCC 7. Поломано уже давно и все молчат, пора прекращать поддержку?

3. Clang warnings.

4. Компилируем hook_wow64.cpp так же, как и всё остальное, ну и обновим его немного.

MZK 12.08.2019 22:51:26 -0700
