@@ -3,6 +3,12 @@ This file is a translation of the main russian changelog and is provided by volu
 It might not always be as up to date as the main changelog.
 =======================================================================================
 
+drkns 28.08.2019 17:03:39 +0100 - build 5458
+
+1. A few workarounds to support Coverity.
+
+2. Coverity warnings.
+
 drkns 27.08.2019 20:24:52 +0100 - build 5457
 
 1. Forum: Improve out of the box keyboard navigation.
