@@ -1,3 +1,9 @@
+drkns 28.08.2019 17:03:39 +0100 - build 5458
+
+1. Пара workaround-ов для поддержки Coverity.
+
+2. Coverity warnings.
+
 drkns 27.08.2019 20:24:52 +0100 - build 5457
 
 1. С форума: Улучшения клавиатурной навигации в стандартной поставке
